welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:9: error: reassignment to val
      a=true
       ^posNeg:11: error: reassignment to val
      a=false
       ^posNeg:15: error: reassignment to val
    a=true
     ^posNeg:17: error: reassignment to val
    a=true
     ^posNeg:19: error: reassignment to val
    a=false
     ^posNeg:21: error: type mismatch;
 found   : Int
 required: Boolean
  return a
         ^